@@ -33,6 +33,10 @@
    run like:
        bin/prepare-refseqs.pl --sizes myrefs.sizes
 
+ * Added a '--noSubfeatures' option for flatfile-to-json.pl to skip
+   importing subfeatures (since `--getSubfeatures` is on by default
+   for some time).
+
  * The "JBrowse" link on the left side of the menu bar, and the
    browser title, now display the "About this browser" title instead
    of JBrowse, if `aboutThisBrowser` is set in the configuration.
